--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="row">
                     <div class="col-8">
                         <h1 class="display-4">What is the 19th Amendment?</h1>
-                        <p class="lead">The 19th amendment was the amendment in charge of guaranteeing women the right to vote in the elections, this was a huge leap within women movements in America</p>
+                        <p class="lead">The 19th amendment is the amendment in that guarantees women the right to vote in the elections. This was a huge leap within women's suffrage movement in America</p>
                         <br>
                         <br>
                         <blockquote class="blockquote text-center">
@@ -118,8 +118,8 @@
     <div class="jumbotron jumbotron-fluid" style="background-color: transparent !important">
         <div class="container">
             <h1 class="display-4">How did it start?</h1>
-            <p class="lead">It all started with the Sufrage Movement, many women of color were discriminated</p>
-            <p class="lead">The Sufrage Movement started in New York and it was a big attraction for a wide range of women, even though a lot of women were attracted to this movement they usually excluded colored women. There were two really important women that participated in this movement, Sarah J.S. Garnet she founded the Equal Suffrage League in the late 1880s and Mabel Lee who was in charge of leading the contingent of Chinese and Chinese American women in a suffrage parade.</p>
+            <p class="lead">It all started with the Suffrage Movement, though many women of color were discriminated</p>
+            <p class="lead">The Suffrage Movement first emerged in New York and it served as big attraction for a wide range of women. Despite the growing attraction to this movement among women, colored women were often excluded. Two key, yet overlooked women, who participated in this movement were Sarah J.S. Garnet, co-founder of the Equal Suffrage League in the late 1880s, and Mabel Lee, a leader in the contingent of Chinese and Chinese American women in a suffrage parade.</p>
             <br>
             <div class="container">
                 <div class="row">
