--- a/pre_process.html
+++ b/pre_process.html
@@ -42,9 +42,9 @@
         <div class="row">
           <div class="col-8">
             <h1 class="display-4">Women Suffrage</h1>
-            <p class="lead">During the early history of America, women suffered from a lack of rights and had to follow conventions on how they should behave</p>
-            <p class="lead">This was the time that women had to suffer from all of this consequences, for example, they couldn't own a property and had no legal claim to any money.</p>
-            <p class="lead">Women decided to start a campaign called the Women Suffrage Campaing, it started before the Civil War. It was a small campaign but it grew over time, many American women were resisting to the conventional ideas of women's rights.</p>
+            <p class="lead">During the early history of America, women lacked equal rights and behaved according to societal conventions of what a constitued a real woman.</p>
+            <p class="lead">These women were restricted from taking part in society of. Restrictions included, but were not limited to owning property and having a legal claim to money.</p>
+            <p class="lead">Before the Civil War, some women decided to get the ball rolling on suffrage with the Women Suffrage Campaign, It was a started out small, but it grew over time as more American women resisted and questioned conventional ideas of what women rights entailed.</p>
           </div>
           <div class="col">
             <figure class="figure">
@@ -70,16 +70,16 @@
           </div>
           <div class="col-8">
             <h1 class="display-4">Seneca Falls Convention</h1>
-            <p class="lead">The movement kept small until 1848 that the movement started to get some national recognition</p>
-            <p class="lead">On July 19, 1848 the Seneca Falls convention was held, this was a two day convention in Wesleyan Chapel, Seneca Falls, New York. There were an estimated 300 attendees, a lot of men and women that worked in the anti-slavery movement joined the convention, and they eventually shifted to the fight to obtain equal rights for women.</p>
-            <p class="lead"><strong>Elizabeth Cady Stanton</strong> made her public speech the first day of the convention which helped people understand the main purpose of the meeting.</p>
+            <p class="lead">The movement remained small until 1848 when it started to gain some national recognition</p>
+            <p class="lead">On July 19, 1848, the Seneca Falls convention, a two day convention at the Wesleyan Chapel in Seneca Falls, New York, was held. The estimated 300 attendees included men and women were also abolitionists. The focus was now shifted for the fight to obtain equal rights for women.</p>
+            <p class="lead"><strong>Elizabeth Cady Stanton</strong>'s was given the first day of the convention. This set the main purpose and goal of the convention.</p>
             <br>
             <blockquote class="blockquote text-center">
               <p class="mb-0">We are assembled to protest against a form of government, existing without the consent of the governed – to declare our right to be free as man is free, to be represented in the government which we are taxed to support, to have such disgraceful laws as give man the power to chastise and imprison his wife, to take the wages which she earns, the property which she inherits, and, in case of separation, the children of her love; laws test against such unjust laws as these that we are assembled today, and to have them, if possible, forever erased from our statute-books, deeming them as a shame and a disgrace to a Christian republic in the nineteenth century.…</p>
               <footer class="blockquote-footer">Elizabeth Cady Stanton</footer>
             </blockquote>
             <br>
-            <p class="lead">After her speech Elizabeth read the Declaration of Sentiments, this was a document that expressed the goal of granting women the rights and freedoms that the Declaration of Independance granted to men.</p>
+            <p class="lead">After her speech, the Declaration of Sentiments was presented. The purpose of the document was to express the end goal of granting women the same rights and freedoms that the Declaration of Independance granted to men.</p>
           </div>
         </div>
       </div>
@@ -93,7 +93,9 @@
         <div class="row">
           <div class="col-8">
             <h1 class="display-4">Declaration of Sentiments</h1>
-            <p class="lead">The Declaration of Sentiments was a document read during the Seneca Falls Convention that stated that women should receive equal rights just as men, it was based on the model of the American Declaration of Independance and it asked to be acknowledged and respected by society.</p>
+            <p class="lead">The Declaration of Sentiments was a document presented during the Seneca Falls Convention 
+              that stated that women should receive equal rights just as men. It was based on the model of the American 
+              Declaration of Independance and demanded that women be acknowledged and respected in society.</p>
             <p class="lead">The document was signed by <strong>62 women and 32 men</strong></p>
           </div>
           <div class="col">
