--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-link" href="pre_process.html">Pre-1919</a>
                     <div class="dropdown">
-                        <a class="nav-link active">1919-1920</a>
+                        <a class="nav-link">1919-1920</a>
                         <div class="dropdown-content">
                           <a href="fed.html">Fed Gov't</a>
                           <a href="harry.html">Harry Burn</a>
