--- a/pre_process.html
+++ b/pre_process.html
@@ -12,28 +12,28 @@
   <!-- Navbar -->
   <div class="shadow p-3 mb-5 bg-white rounded sticky-top">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: transparent !important;">
-      <a class="navbar-brand" href="index.html">19th Amendment</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="pre_process.html">Pre-1919</a>
-            <div class="dropdown">
-                <a class="nav-link active">1919-1920</a>
-                <div class="dropdown-content">
-                  <a href="fed.html">Fed Gov't</a>
-                  <a href="harry.html">Harry Burn</a>
-                  <a href="states.html">States</a>
-                </div>
-              </div>
-            <a class="nav-link" href="post_process.html">Post-1920</a>
-            <a class="nav-link" href="sources.html">Sources</a>
+        <a class="navbar-brand" href="index.html">19th Amendment</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link active" href="pre_process.html">Pre-1919</a>
+                <div class="dropdown">
+                    <a class="nav-link">1919-1920</a>
+                    <div class="dropdown-content">
+                      <a href="fed.html">Fed Gov't</a>
+                      <a href="harry.html">Harry Burn</a>
+                      <a href="states.html">States</a>
+                    </div>
+                  </div>
+                <a class="nav-link" href="post_process.html">Post-1920</a>
+                <a class="nav-link" href="sources.html">Sources</a>
+            </div>
         </div>
-      </div>
     </nav>
-  </div>
+</div>
   
   <!-- Women Suffrage -->
   <div class="jumbotron jumbotron-fluid" style="background-color: transparent !important">
