--- a/sources.html
+++ b/sources.html
@@ -20,7 +20,7 @@
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-link" href="pre_process.html">Pre-1919</a>
                     <div class="dropdown">
-                        <a class="nav-link active">1919-1920</a>
+                        <a class="nav-link">1919-1920</a>
                         <div class="dropdown-content">
                           <a href="fed.html">Fed Gov't</a>
                           <a href="harry.html">Harry Burn</a>
@@ -28,11 +28,12 @@
                         </div>
                       </div>
                     <a class="nav-link" href="post_process.html">Post-1920</a>
-                    <a class="nav-link" href="sources.html">Sources</a>
+                    <a class="nav-link active" href="sources.html">Sources</a>
                 </div>
             </div>
         </nav>
     </div>
+
     <div class="container" style="margin: 20px; width: 1700px;">
         <h4 class="lead"><strong>Sources:</strong></h4>
         <ul>
