--- a/sources.html
+++ b/sources.html
@@ -49,6 +49,23 @@
         <!-- Sources to be added --> 
         
     </div>
+    <div class="container" style="margin: 20px; width: 1700px;">
+        <h4 class="lead"><strong>More Sources (MLA):</strong></h4>
+        <ul>
+            <li><p>Bomboy, Scott. “The vote that led to the 19th Amendment.” National Constitution Center, National Constitution Center, 18 August 2020, https://constitutioncenter.org/blog/the-man-and-his-mom-who-gave-women-the-vote/.</p></li>
+            <li><p>Levy, Michael. “Nineteenth Amendment.” Britannica, Britannica, https://www.britannica.com/topic/Nineteenth-Amendment.</p></li>
+            <li><p>Mckeown, Margaret M. “My Mother Made Me Do It A Short History of the Nineteenth Amendment.” Litigation, vol. Vol. 46, no. Issue 3, Spring2020, p23-27. 5p., https://eds-b-ebscohost-com.dominican.idm.oclc.org/eds/detail/detail?vid=3&sid=ab8f20ce-8c9c-4052-b043-20ac0ce6c58d%40pdc-v-sessmgr03&bdata=JnNpdGU9ZWRzLWxpdmU%3d#AN=143177150&db=a9h.</p></li>
+            <li><p>National Park Service. “State-by-State Race to Ratification of the 19th Amendment.” National Park Service, National Park Service, https://www.nps.gov/subjects/womenshistory/womens-suffrage-timeline.htm.</p></li>
+            <li><p>National Park Services. “19th Amendment By State.” National Park Services, National Park Services, https://www.nps.gov/subjects/womenshistory/19th-amendment-by-state.htm.</p></li>
+            <li><p>National Park Services. “What happened after?: Women's History.” National Park Services., National Park Services., https://www.nps.gov/articles/what-happened-after-women-s-history.htm.</p></li>
+            <li><p>Pruitt, Sarah. “American Women's Suffrage Came Down to One Man's Vote Harry Burn reversed his anti-suffrage vote after receiving a plea from his mother.” History, History.com, 24 August 2018, https://www.history.com/news/american-womens-suffrage-19th-amendment-one-mans-vote.</p></li>
+            <li><p>Pruitt, Sarah. “19th Amendment: A Timeline of the Fight for All Women's Right to Vote From Seneca Falls to the civil rights movement, see what events led to the ratification of the 19th amendment and later acts supporting Black and Native American women's right to vote.” History, History.com, 13 August 2020, https://www.history.com/news/19th-amendment-women-vote-timeline.</p></li>
+            <li><p>“Representative Harry T. Burn.” Tennessee Virtual Archive, Tennessee Virtual Archive, https://teva.contentdm.oclc.org/digital/collection/p15138coll27/id/75.</p></li>
+            <li><p>Sixty-sixth Congress of the United States of America. “19th Amendment to the U.S. Constitution: Women's Right to Vote (1920).” Our Documents, U.S. National Archives & Records Administration, https://www.ourdocuments.gov/doc.php?flash=false&doc=63.</p></li>
+        </ul>
+        <!-- Sources to be added --> 
+        
+    </div>
 
 </body>
 </html>
